Add useSavings to share purchase transaction